--- a/tomcat7-jdk8-latest/Dockerfile
+++ b/tomcat7-jdk8-latest/Dockerfile
@@ -16,7 +16,7 @@ ENV	TOMCAT_HOME=/opt/tomcat \
 	CATALINA_OPTS="-Duser.timezone=GMT+08"
 #	CATALINA_OPTS="-Xms1024m -Xmx2048m -Xmn768m -Xss2m -XX:NewSize=512M -XX:MaxNewSize=512m  -XX:PermSize=512M -XX:MaxPermSize=1024m -XX:-UseSplitVerifier -Djava.awt.headless=true -Duser.timezone=GMT+08"
 COPY tomcat /opt/tomcat
-RUN chmod -R +x /opt/tomcat/bin/ /opt/jdk/bin/
+RUN chmod -R +x /opt/tomcat/bin/ /opt/jdk/bin/ /opt/jdk/jre/bin/
 CMD ["catalina.sh", "run"]
 VOLUME ["/logs"]
 EXPOSE 8080
