--- a/zookeeper-3.4.6/Dockerfile
+++ b/zookeeper-3.4.6/Dockerfile
@@ -33,7 +33,7 @@ RUN set -ex; \
         ca-certificates \
         gnupg \
         libressl; \
-    cd $DISTRO_NAME  \
+    cd $DISTRO_NAME; \
     mv "$DISTRO_NAME/conf/"* "$ZOO_CONF_DIR"; \
     apk del .build-deps
 
