--- a/zookeeper-3.4.6/Dockerfile
+++ b/zookeeper-3.4.6/Dockerfile
@@ -46,5 +46,6 @@ ENV PATH=$PATH:/$DISTRO_NAME/bin \
     ZOOCFGDIR=$ZOO_CONF_DIR
 
 COPY docker-entrypoint.sh /
+RUN chown +x /docker-entrypoint.sh
 ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ["zkServer.sh", "start-foreground"]
