--- a/tomcat8-jdk8/tomcat/lib/log4j.properties
+++ b/tomcat8-jdk8/tomcat/lib/log4j.properties
@@ -1,7 +1,7 @@
 log4j.rootLogger=WARN, CATALINA
 
 # Define all the appenders
-log4j.appender.CATALINA=org.apache.log4j.RollingFileAppender
+; log4j.appender.CATALINA=org.apache.log4j.RollingFileAppender
 log4j.appender.CATALINA.File=${catalina.base}/logs/catalina.log
 log4j.appender.CATALINA.MaxFileSize=10240KB
 log4j.appender.CATALINA.MaxBackupIndex=100
@@ -11,7 +11,7 @@ log4j.appender.CATALINA.DatePattern='.'yyyy-MM-dd-HH-mm'.log'
 log4j.appender.CATALINA.layout = org.apache.log4j.PatternLayout
 log4j.appender.CATALINA.layout.ConversionPattern = %d [%t] %-5p %c- %m%n
 
-log4j.appender.LOCALHOST=org.apache.log4j.DailyRollingFileAppender
+; log4j.appender.LOCALHOST=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.LOCALHOST.File=${catalina.base}/logs/localhost.log
 log4j.appender.LOCALHOST.Append=true
 log4j.appender.LOCALHOST.Encoding=UTF-8
@@ -19,7 +19,7 @@ log4j.appender.LOCALHOST.DatePattern='.'yyyy-MM-dd'.log'
 log4j.appender.LOCALHOST.layout = org.apache.log4j.PatternLayout
 log4j.appender.LOCALHOST.layout.ConversionPattern = %d [%t] %-5p %c- %m%n
 
-log4j.appender.MANAGER=org.apache.log4j.DailyRollingFileAppender
+; log4j.appender.MANAGER=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.MANAGER.File=${catalina.base}/logs/manager.log
 log4j.appender.MANAGER.Append=true
 log4j.appender.MANAGER.Encoding=UTF-8
@@ -27,7 +27,7 @@ log4j.appender.MANAGER.DatePattern='.'yyyy-MM-dd'.log'
 log4j.appender.MANAGER.layout = org.apache.log4j.PatternLayout
 log4j.appender.MANAGER.layout.ConversionPattern = %d [%t] %-5p %c- %m%n
 
-log4j.appender.HOST-MANAGER=org.apache.log4j.DailyRollingFileAppender
+; log4j.appender.HOST-MANAGER=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.HOST-MANAGER.File=${catalina.base}/logs/host-manager.log
 log4j.appender.HOST-MANAGER.Append=true
 log4j.appender.HOST-MANAGER.Encoding=UTF-8
