--- a/tomcat8-jdk8/tomcat/lib/log4j.properties
+++ b/tomcat8-jdk8/tomcat/lib/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=WARN, CATALINA
+log4j.rootLogger=FINE, CATALINA
 
 # Define all the appenders
 ; log4j.appender.CATALINA=org.apache.log4j.RollingFileAppender
